# echokit_server

./: .env.example  .gitignore  Cargo.toml  README.md  config.gemini.toml  config.genai.toml  config.toml
.claude/skills/: seekdb-design.md  seekdb-management.md
.claude/skills/echokit-config-generator/: CHANGELOG.md  CONTRIBUTING.md  MARKETPLACE.md  README.md  SKILL.md
.claude/skills/echokit-config-generator/examples/: coding-assistant.toml  customer-service.toml  education-tutor.toml  healthcare-assistant.toml  technical-support.toml  voice-companion.toml
.claude/skills/echokit-config-generator/templates/: SETUP_GUIDE.md  prompt-presets.yml
.github/workflows/: release.yml  rust_ci.yml
docker/: README.md
docker/fly/: README.md  fly.toml
docker/server/: Dockerfile  README.md  config.toml
docker/server-vad/: Dockerfile  README.md  config.toml
examples/alibailian/: config.toml
examples/gaia/: config.toml
examples/gaia/chat/: config.toml
examples/gaia/english_teacher/: config.toml
examples/gaia/mcp/: config.toml
examples/gaia/oppenheimer/: config.toml
examples/gaia/paris/: config.toml
examples/gaia/singapore/: config.toml
examples/gaia/steve_jobs/: config.toml
examples/gaia/translate/: config.toml
examples/gemini/chat/: config.toml
examples/gemini/custom_tts/: config.toml
examples/gemini/live/: config.toml
examples/gemini/singapore/: config.toml
examples/gemini/steve_jobs/: config.toml
examples/grok/chat/: config.toml
examples/grok/responses/: config.toml
examples/groq/: config.toml
examples/groq/chat/: config.toml
examples/groq/responses/: config.toml
examples/mcp/: config.toml
examples/mcp/seekdb/: .env.template  .gitignore  Cargo.toml  README.md  config.toml
examples/mcp/seekdb/src/: config.rs  db.rs  embeddings.rs  lib.rs  main.rs
examples/openai/chat/: config.toml
examples/openai/responses/: config.toml
examples/telnyx/: README.md  config.toml
examples/tts/11labs/: config.toml
examples/tts/cosyvoice/: config.toml
examples/tts/gpt-sovits/: config.toml  config_llm_opt.toml
prompts/: seekdb_cn.txt  seekdb_en.txt
resources/: default_dynamic_prompts.json  edit_config.html  edit_config_zh.html  index.html  index_zh.html
skills/echokit-config-generator/: CHANGELOG.md  LICENSE  MARKETPLACE.md  README.md  SKILL.md
skills/echokit-config-generator/templates/: SETUP_GUIDE.md
src/: config.rs  main.rs  protocol.rs  util.rs
src/ai/: mod.rs  tts.rs  vad.rs
src/ai/bailian/: cosyvoice.rs  mod.rs  realtime_asr.rs
src/ai/elevenlabs/: tts.rs
src/ai/gemini/: mod.rs  types.rs
src/ai/genai/: mod.rs  types.rs
src/ai/openai/: chat.rs  client.rs  mod.rs  realtime.rs  tool.rs
src/resources/: .env.example  config.toml.example
src/services/: file.rs  mod.rs  realtime_ws.rs  ws.rs  ws_record.rs
src/services/ws/stable/: asr.rs  claude.rs  gemini.rs  llm.rs  mod.rs  tts.rs
