[package]
name = "esp_assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.6"
log = "0.4.25"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rmp-serde = "1"

anyhow = "1.0"

axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["multipart", "json"] }
hound = "3.5.1"
wav_io = "0.1.15"
rand = "0.9.0"
uuid = { version = "1.14", features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng",
] }
bytes = "1.10.0"
aho-corasick = "1.1.3"
hanconv = "0.3.4"
fon = { git = "https://github.com/ardaku/fon.git", branch = "v1" }
# opencc-rust = { version = "1.1.19", features = ["static-dictionaries"] }

# gemini
base64 = "0.22.1"
reqwest-websocket = "0.5.0"
futures-util = "0.3.31"
http = "1.3.1"
