[package]
name = "echokit_server"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11"
log = "0.4"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.9"
rmp-serde = "1"

anyhow = "1.0"

axum = { version = "0.8", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }

tokio = { version = "1", features = ["full"] }

reqwest = { version = "0.12", features = ["multipart", "json", "stream"] }
hound = "3.5.1"
wav_io = "0.1.15"
rand = "0.9.2"
uuid = { version = "1.14", features = [
    "v4",       # Lets you generate random UUIDs
    "fast-rng",
] }
bytes = "1.10"
aho-corasick = "1.1.3"
hanconv = "0.4"
fon = { git = "https://github.com/ardaku/fon.git", branch = "v1" }
# opencc-rust = { version = "1.1.19", features = ["static-dictionaries"] }

# gemini
rmcp = { version = "0.1.5", features = [
    "base64",
    "client",
    "macros",
    "transport-sse-client",
    "transport-streamable-http-client",
    "reqwest",
], default-features = false, git = "https://github.com/modelcontextprotocol/rust-sdk", rev = "b9d7d61" } # branch = "main"
base64 = "0.22.1"
reqwest-websocket = "0.5.1"
futures-util = "0.3.31"
http = "1.3.1"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.6", features = ["fs", "trace"] }

chrono = "0.4.41"

dotenv = "0.15"

[lints.clippy]
option_map_unit_fn = "allow"
large_enum_variant = "allow"